<resources>
    <string name="app_name">Flag Quiz App</string>

    <string name="AD">Andorra</string>
    <string name="AE">United</string>
    <string name="AF">Afghanistan</string>
    <string name="AG">Antigua</string>
    <string name="AI">Anguilla</string>
    <string name="AL">Albania</string>
    <string name="AM">Armenia</string>
    <string name="AO">Angola</string>
    <string name="AQ">Antarctica</string>
    <string name="AR">Argentina</string>
    <string name="AS">American</string>
    <string name="AT">Austria</string>
    <string name="AU">Australia</string>
    <string name="AW">Aruba</string>
    <string name="AX">\u00c5land</string>
    <string name="AZ">Azerbaijan</string>
    <string name="BA">Bosnia</string>
    <string name="BB">Barbados</string>
    <string name="BD">Bangladesh</string>
    <string name="BE">Belgium</string>
    <string name="BF">Burkina</string>
    <string name="BG">Bulgaria</string>
    <string name="BH">Bahrain</string>
    <string name="BI">Burundi</string>
    <string name="BJ">Benin</string>
    <string name="BL">Saint</string>
    <string name="BM">Bermuda</string>
    <string name="BN">Brunei</string>
    <string name="BO">Bolivia</string>
    <string name="BQ">Caribbean</string>
    <string name="BR">Brazil</string>
    <string name="BS">Bahamas</string>
    <string name="BT">Bhutan</string>
    <string name="BV">Bouvet</string>
    <string name="BW">Botswana</string>
    <string name="BY">Belarus</string>
    <string name="BZ">Belize</string>
    <string name="CA">Canada</string>
    <string name="CC">Cocos</string>
    <string name="CD">Congo</string>
    <string name="CF">Central</string>
    <string name="CG">Republic</string>
    <string name="CH">Switzerland</string>
    <string name="CI">C\u00f4te</string>
    <string name="CK">Cook</string>
    <string name="CL">Chile</string>
    <string name="CM">Cameroon</string>
    <string name="CN">China</string>
    <string name="CO">Colombia</string>
    <string name="CR">Costa</string>
    <string name="CU">Cuba</string>
    <string name="CV">Cape</string>
    <string name="CW">Cura\u00e7ao</string>
    <string name="CX">Christmas</string>
    <string name="CY">Cyprus</string>
    <string name="CZ">Czech</string>
    <string name="DE">Germany</string>
    <string name="DJ">Djibouti</string>
    <string name="DK">Denmark</string>
    <string name="DM">Dominica</string>
    <string name="DZ">Algeria</string>
    <string name="EC">Ecuador</string>
    <string name="EE">Estonia</string>
    <string name="EG">Egypt</string>
    <string name="EH">Western</string>
    <string name="ER">Eritrea</string>
    <string name="ES">Spain</string>
    <string name="ET">Ethiopia</string>
    <string name="EU">Europe</string>
    <string name="FI">Finland</string>
    <string name="FJ">Fiji</string>
    <string name="FK">Falkland</string>
    <string name="FM">Micronesia</string>
    <string name="FO">Faroe</string>
    <string name="FR">France</string>
    <string name="GA">Gabon</string>
    <string name="GB_ENG">England</string>
    <string name="GB_NIR">Northern</string>
    <string name="GB_SCT">Scotland</string>
    <string name="GB_WLS">Wales</string>
    <string name="GB">United</string>
    <string name="GD">Grenada</string>
    <string name="GE">Georgia</string>
    <string name="GF">French</string>
    <string name="GG">Guernsey</string>
    <string name="GH">Ghana</string>
    <string name="GI">Gibraltar</string>
    <string name="GL">Greenland</string>
    <string name="GM">Gambia</string>
    <string name="GN">Guinea</string>
    <string name="GP">Guadeloupe</string>
    <string name="GQ">Equatorial</string>
    <string name="GR">Greece</string>
    <string name="GS">South</string>
    <string name="GT">Guatemala</string>
    <string name="GU">Guam</string>
    <string name="GW">Guinea-Bissau</string>
    <string name="GY">Guyana</string>
    <string name="HK">Hong</string>
    <string name="HM">Heard</string>
    <string name="HN">Honduras</string>
    <string name="HR">Croatia</string>
    <string name="HT">Haiti</string>
    <string name="HU">Hungary</string>
    <string name="ID">Indonesia</string>
    <string name="IE">Ireland</string>
    <string name="IL">Israel</string>
    <string name="IM">Isle</string>
    <string name="IN">India</string>
    <string name="IO">British</string>
    <string name="IQ">Iraq</string>
    <string name="IR">Iran</string>
    <string name="IS">Iceland</string>
    <string name="IT">Italy</string>
    <string name="JE">Jersey</string>
    <string name="JM">Jamaica</string>
    <string name="JO">Jordan</string>
    <string name="JP">Japan</string>
    <string name="KE">Kenya</string>
    <string name="KG">Kyrgyzstan</string>
    <string name="KH">Cambodia</string>
    <string name="KI">Kiribati</string>
    <string name="KM">Comoros</string>
    <string name="KN">Saint</string>
    <string name="KP">Korea</string>
    <string name="KR">Korea</string>
    <string name="KW">Kuwait</string>
    <string name="KY">Cayman</string>
    <string name="KZ">Kazakhstan</string>
    <string name="LA">Lao</string>
    <string name="LB">Lebanon</string>
    <string name="LC">Saint</string>
    <string name="LI">Liechtenstein</string>
    <string name="LK">Sri</string>
    <string name="LR">Liberia</string>
    <string name="LS">Lesotho</string>
    <string name="LT">Lithuania</string>
    <string name="LU">Luxembourg</string>
    <string name="LV">Latvia</string>
    <string name="LY">Libya</string>
    <string name="MA">Morocco</string>
    <string name="MC">Monaco</string>
    <string name="MD">Moldova</string>
    <string name="ME">Montenegro</string>
    <string name="MF">Saint</string>
    <string name="MG">Madagascar</string>
    <string name="MH">Marshall</string>
    <string name="MK">Macedonia</string>
    <string name="ML">Mali</string>
    <string name="MM">Myanmar</string>
    <string name="MN">Mongolia</string>
    <string name="MO">Macao</string>
    <string name="MP">Northern</string>
    <string name="MQ">Martinique</string>
    <string name="MR">Mauritania</string>
    <string name="MS">Montserrat</string>
    <string name="MT">Malta</string>
    <string name="MU">Mauritius</string>
    <string name="MV">Maldives</string>
    <string name="MW">Malawi</string>
    <string name="MX">Mexico</string>
    <string name="MY">Malaysia</string>
    <string name="MZ">Mozambique</string>
    <string name="NA">Namibia</string>
    <string name="NC">New</string>
    <string name="NE">Niger</string>
    <string name="NF">Norfolk</string>
    <string name="NG">Nigeria</string>
    <string name="NI">Nicaragua</string>
    <string name="NL">Netherlands</string>
    <string name="NO">Norway</string>
    <string name="NP">Nepal</string>
    <string name="NR">Nauru</string>
    <string name="NU">Niue</string>
    <string name="NZ">New</string>
    <string name="OM">Oman</string>
    <string name="PA">Panama</string>
    <string name="PE">Peru</string>
    <string name="PF">French</string>
    <string name="PG">Papua</string>
    <string name="PH">Philippines</string>
    <string name="PK">Pakistan</string>
    <string name="PL">Poland</string>
    <string name="PM">Saint</string>
    <string name="PN">Pitcairn</string>
    <string name="PR">Puerto</string>
    <string name="PS">Palestine</string>
    <string name="PT">Portugal</string>
    <string name="PW">Palau</string>
    <string name="PY">Paraguay</string>
    <string name="QA">Qatar</string>
    <string name="RE">Réunion</string>
    <string name="RO">Romania</string>
    <string name="RS">Serbia</string>
    <string name="RU">Russian</string>
    <string name="RW">Rwanda</string>
    <string name="SA">Saudi</string>
    <string name="SB">Solomon</string>
    <string name="SC">Seychelles</string>
    <string name="SD">Sudan</string>
    <string name="SE">Sweden</string>
    <string name="SG">Singapore</string>
    <string name="SH">Saint</string>
    <string name="SI">Slovenia</string>
    <string name="SJ">Svalbard</string>
    <string name="SK">Slovakia</string>
    <string name="SL">Sierra</string>
    <string name="SM">San</string>
    <string name="SN">Senegal</string>
    <string name="SO">Somalia</string>
    <string name="SR">Suriname</string>
    <string name="SS">South</string>
    <string name="ST">Sao</string>
    <string name="SV">El</string>
    <string name="SX">Sint</string>
    <string name="SY">Syrian</string>
    <string name="SZ">Swaziland</string>
    <string name="TC">Turks</string>
    <string name="TD">Chad</string>
    <string name="TF">French</string>
    <string name="TG">Togo</string>
    <string name="TH">Thailand</string>
    <string name="TJ">Tajikistan</string>
    <string name="TK">Tokelau</string>
    <string name="TL">Timor-Leste</string>
    <string name="TM">Turkmenistan</string>
    <string name="TN">Tunisia</string>
    <string name="TO">Tonga</string>
    <string name="TR">Turkey</string>
    <string name="TT">Trinidad</string>
    <string name="TV">Tuvalu</string>
    <string name="TW">Taiwan</string>
    <string name="TZ">Tanzania</string>
    <string name="UA">Ukraine</string>
    <string name="UG">Uganda</string>
    <string name="UM">US</string>
    <string name="US">United</string>
    <string name="UY">Uruguay</string>
    <string name="UZ">Uzbekistan</string>
    <string name="VA">Holy</string>
    <string name="VC">Saint</string>
    <string name="VE">Venezuela</string>
    <string name="VG">Virgin</string>
    <string name="VI">Virgin</string>
    <string name="VN">Vietnam</string>
    <string name="VU">Vanuatu</string>
    <string name="WF">Wallis</string>
    <string name="WS">Samoa</string>
    <string name="XK">Kosovo</string>
    <string name="YE">Yemen</string>
    <string name="YT">Mayotte</string>
    <string name="ZA">South</string>
    <string name="ZM">Zambia</string>
    <string name="ZW">Zimbabwe</string>
    <string name="flags_quiz">Flags Quiz</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">Finish</string>
    <string name="flag_image">FlagImage</string>
</resources>