<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/standardMargin"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="@dimen/bigSize"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trophy" />

    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:text="@string/hey_congratulations"
        android:textColor="@color/white"
        android:textSize="@dimen/bigSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:textColor="@color/white"
        android:textSize="@dimen/bigSize"
        android:textStyle="bold"
        tools:text="Username" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standardMargin"
        android:textColor="@color/white"
        android:textSize="@dimen/bigSize"
        tools:text="Your score is 9 out of 10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standardMargin"
        android:layout_marginTop="@dimen/standardMargin"
        android:background="@drawable/start_button_back"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="@dimen/standardSize"
        android:textStyle="bold" />

</LinearLayout>